--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script charset="utf-8" src="https://map.qq.com/api/gljs?v=1.exp&key=L3KBZ-YAWCT-HZ3XE-LXBP2-KLXAQ-W7B46"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
